Add unit tests for missing cases